# wall-aura

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DELIVERABLES.md  DOCUMENTATION.md  FIXES_REPORT_AR.md  FULL_SUMMARY.md  IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  SETUP_INSTRUCTIONS.md  TESTING_REPORT_AR.md  WALKTHROUGH.md  build.rs  index.html  install_output.txt  package-lock.json  package.json  setup.ps1  tailwind.config.js
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css  main.tsx  package-lock.json  package.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows_integration.rs
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: build.rs  commands.rs  lib.rs  main.rs  shaders.rs  windows_integration.rs
src/__tests__/: App.test.tsx
src/components/: ContentManager.tsx  Dashboard.tsx  MonitorSelector.tsx  ShaderEditor.tsx
src/components/__tests__/: ContentManager.test.tsx  Dashboard.test.tsx  MonitorSelector.test.tsx  ShaderEditor.test.tsx
