[package]
name = "auraflow-wallpaper"
version = "0.1.0"
description = "AI Powered Animated Wallpaper"
authors = ["Ahmed"]
edition = "2021"
build = "build.rs"

[lib]
name = "wall_aura_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-utils = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
dashmap = "5.5"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
env_logger = "0.10"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
